@@ -25,7 +25,8 @@
  * @test
  * @bug 8210009
  * @summary Source Launcher classloader should support getResource and getResourceAsStream
- * @modules jdk.compiler jdk.jdeps
+ * @enablePreview
+ * @modules jdk.compiler
  * @library /tools/lib
  * @build toolbox.JavaTask toolbox.ToolBox
  * @run main GetResourceTest
@@ -53,8 +54,7 @@ public class GetResourceTest {
         ToolBox tb = new ToolBox();
         Path file = Paths.get(tb.testSrc).resolve("src").resolve("CLTest.java");
         new JavaTask(tb)
-            .vmOptions("--add-modules", "jdk.jdeps",
-                       "--add-exports", "jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED")
+            .vmOptions("--enable-preview", "--source", String.valueOf(Runtime.version().feature()))
             .className(file.toString()) // implies source file mode
             .run(Task.Expect.SUCCESS)
             .writeAll();
